gitops/dashboard/deployment/service-kube-dashboard.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kube-dashboard
  name: kube-dashboard
  namespace: kube-system
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    k8s-app: kube-dashboard
